# demo

./: .gitignore  Makefile
abs_socket/: Makefile  abs_srv.h  client.c  server.c  srv_epoll.c  srv_epoll.h  srv_select.c  srv_select.h
ai/face_quality/: evg_cli.cpp  evg_common.h  evg_detector.cpp  evg_detector.h  evg_emotion.cpp  evg_emotion.h  evg_json.cpp  evg_json.h  evg_msg.h  evg_occlusion.cpp  evg_occlusion.h  evg_quality.cpp  evg_quality.h  evg_srv.cpp  evg_test.cpp  evg_timing.h  fer_train.py  fod_train.py  gen_pb_model.py  main.cpp
ai/qat/: Untitled.ipynb  qat_single_layer.h5  qat_test.h5
ai/qat/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ai/tvm/: cross_compile_kernel.ipynb  example.cc  keras_deploy.ipynb  tvm_test_lib.tar
ai/tvm/.ipynb_checkpoints/: cross_compile_kernel-checkpoint.ipynb  keras_deploy-checkpoint.ipynb
backtrace/: Makefile  bt_arm.c
common/: Makefile  check_endian.c  common.h  strmap.c  uchar2str.c
dlist/: Makefile  dlist.c  dlist.h  main.c
fifo_ring/: Makefile  fifo_ring.c
fsm/: Makefile  fsm.c
ipc/: Makefile  costomer.c  locker.h  mmap_com.c  mmap_com.h  mymap  producer.c  sem_com.c  sem_com.h  sem_posix.c  sem_posix.h  sem_sysv.c  sem_sysv.h  shm_com.c  shm_com.h  shmer.h
json_parser/: cjson_parser.c  cjson_parser.h  iot_json_parser.c  iot_json_parser.h  json_parser.h
kernel_list/: Makefile  kernel_list.h  main.c
kernel_rbtree/: main.c  rbtree.c  rbtree.h  rbtree_augmented.h
list/: Makefile  dlist.c  dlist.h  list.c  list.h  slist.c  slist.h
makefile_demo/: Makefile  mf_demo  mf_demo.c
makefile_demo/common/: com_print.c  common.h
makefile_demo/network/: nw.h  nw_print.c
makefile_demo/util/: util.h  util_print.c
netlink/: Makefile  netlink_kernel.c  netlink_user.c
notify_chain/: Makefile  chain.c  chain.h  main.c  notifier.c  notifier.h  publisher.c  publisher.h  subscriber.c  subscriber.h
pthread/: Makefile  pthread_demo.c
python/: dl_img.py  dl_img2.py  download.py  split_samples.py  switch_on_off.py  yolo_visualize.py
python/GAN/: gan.py  wgan.py
python/awesome-webapp/www/: app.py  orm.py
python/fer/: fer.py  fer_train.py  ferv2.py  h5topb.py  mk_text_graph.py  pb.py  prepare_data.py  prepare_data_fer2013.py  sample_tool.py
python/fm/: fm_demo.py
python/gbdt+lr/: gbdt+lr.py
python/ml/: ml_LR.py  ml_lightgbm_bin_cls.py  ml_lightgbm_multi_cls.py  ml_preprocess.py  ml_stacking.py  ml_visualize.py  ml_xgboost_bin_cls.py
python/paco/: camera.py  dataCenter.py  detector.py
python/registry/: registry.py  test.py
python/tf/: captcha3.py  captcha_rnn.py  hand_classify.py  hand_classify2.py  iris_classify.py  test.py  tf_test.py  visualizer.py
python/wgan-gp/: gan_cifar.py  gan_fer2013.py  prepare_data_fer2013.py
script/: test_time
socket/: Makefile  client.c  server.c
threadpool/: Makefile  bsem.c  bsem.h  task_queue.c  task_queue.h  test.c  thread.c  thread.h  thread_pool.c  thread_pool.h
tmp/: Evergrande_Switch_V2_callbacks.c  components.tar
tmp/components/test/: CMakeLists.txt  main.cpp
tmp/components/test/common/: log_test.cpp
tmp/components/test/os_adapter/: memory_test.cpp  mutex_test.cpp  task_test.cpp  timer_test.cpp
upgrade/: Makefile  upgrade.c  upgrade.h
vim/: .vimrc
watchfs/: Makefile  Readme  event_queue.c  event_queue.h  inotify_test.c  inotify_utils.c  inotify_utils.h
(+58 files in other folders)
